kubernetes/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: python:3.10
      command: ['sleep', '999999999']
