kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ddp-web-service
spec:
  type: ClusterIP
  selector:
    app: ddp-web
  ports:
  - name: ddp-web-service
    port: 3000
    targetPort: 3000
